--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 @layer base {
@@ -103,4 +104,8 @@ body {
   .gradient-subTitle {
     @apply gradient-sub font-extrabold tracking-tighter pr-2 pb-2 text-transparent bg-clip-text;
   }
+}
+
+.tagColor {
+  @apply px-2 py-1 text-xs font-medium rounded-full text-center;
 }
